more diactric fixes

--- a/index.html
+++ b/index.html
@@ -53,44 +53,44 @@
                 <p>Now that I have retired from the State University of New York at Albany (UAlbany), 
                     I have established this website for the purpose of making my publications and my 
                     translations available to those who might be interested.  It is my hope that the discussion of 
-                    works by Machado, Unamuno, Bécquer, Sábato, Rulfo, etc., as well as the discussion of Jungian psychology, 
+                    works by Machado, Unamuno, BÃ©cquer, SÃ¡bato, Rulfo, etc., as well as the discussion of Jungian psychology, 
                     will contribute to a better understanding of human nature and the meaning of our existence.</p>
 
-                <p>I have posted here the complete text of my book: <em><a href="book.html">El pensamiento religioso y filosófico de Antonio Machado</a></em> as well as an English translation of this work: <em><a href="book_en.html">The Religious and 
+                <p>I have posted here the complete text of my book: <em><a href="book.html">El pensamiento religioso y filosÃ³fico de Antonio Machado</a></em> as well as an English translation of this work: <em><a href="book_en.html">The Religious and 
                 Philosophical Thought of Antonio Machado</a></em>. I have also posted the complete text of my articles.  
                 I have translated all the <a href="poems.html">poems</a> of Antonio Machado, as well as his philosophical work, 
-                <em><a href="poems.html">From the Apocryphal Songbook (Del cancionero apócrifo)</a></em>, some excerpts from Juan de Mairena, 
+                <em><a href="poems.html">From the Apocryphal Songbook (Del cancionero apÃ³crifo)</a></em>, some excerpts from Juan de Mairena, 
                 and the biography of Machado by his brother: <em><a href="biography_toc.html">The Final Solitude of the poet 
-                Antonio Machado (Memories of his brother José)</a></em>.  I have also translated 
-                Unamuno's essay <a href="unamuno.html">"My Religion" (Mi religión)</a> and a selection of poems dealing with religion 
-                from his books: <em><a href="unamuno_religious.html">Poetry (Poesías)</a></em>, <em><a href="unamuno_religious.html">Rosary of Lyrical Sonnets (Rosario de sonetos líricos)</a></em>, 
-                and the entire work, <em><a href="unamuno_religious.html">The Christ of Velazquez (El Cristo de Velázquez)</a></em>.  
-                I have now translated the <em><a href="becquer.html">Rimas</a></em> (Poems) and the <em><a href="becquer.html">Leyendas</a></em> (Legends) of Gustavo Adolfo Bécquer.  Any of these works may be 
+                Antonio Machado (Memories of his brother JosÃ©)</a></em>.  I have also translated 
+                Unamuno's essay <a href="unamuno.html">"My Religion" (Mi religiÃ³n)</a> and a selection of poems dealing with religion 
+                from his books: <em><a href="unamuno_religious.html">Poetry (PoesÃ­as)</a></em>, <em><a href="unamuno_religious.html">Rosary of Lyrical Sonnets (Rosario de sonetos lÃ­ricos)</a></em>, 
+                and the entire work, <em><a href="unamuno_religious.html">The Christ of Velazquez (El Cristo de VelÃ¡zquez)</a></em>.  
+                I have now translated the <em><a href="becquer.html">Rimas</a></em> (Poems) and the <em><a href="becquer.html">Leyendas</a></em> (Legends) of Gustavo Adolfo BÃ©cquer.  Any of these works may be 
                 cited or copied, and credit should be given to the source of this material.</p>
                 
-                <p>The two lectures—<a href="lectures.html">"The Undiscovered Self"</a> and <a href="lectures.html">"The Art of Loving"</a>—help to explain the basic philosophy 
+                <p>The two lecturesâ€”<a href="lectures.html">"The Undiscovered Self"</a> and <a href="lectures.html">"The Art of Loving"</a>â€”help to explain the basic philosophy 
 I followed in my teaching, and in my publications.</p>
 
             <h2 style="clear:both;">Declaraci&oacute;n de Prop&oacute;sito</h2>
-            <p>Después de retirarme de la Universidad de Nueva York en Albany (UAlbany), 
+            <p>DespuÃ©s de retirarme de la Universidad de Nueva York en Albany (UAlbany), 
 he hecho este website para hacer accesibles mis publicaciones y mis traducciones 
-para cualquier persona que quisiera consultarlas. Espero que la discusión de las obras 
-de Machado, Unamuno, Bécquer, Sábato, Rulfo, etc., y de la psicología junguiana, 
-nos ayude a entender un poco más sobre la naturaleza humana, y el sentido de nuestra vida. </p>
+para cualquier persona que quisiera consultarlas. Espero que la discusiÃ³n de las obras 
+de Machado, Unamuno, BÃ©cquer, SÃ¡bato, Rulfo, etc., y de la psicologÃ­a junguiana, 
+nos ayude a entender un poco mÃ¡s sobre la naturaleza humana, y el sentido de nuestra vida. </p>
 
-            <p>He puesto aquí el texto completo de mi libro, <em><a href="book.html">El pensamiento religioso y filosófico 
-de Antonio Machado</a></em>, y una traducción al inglés, <em><a href="book_en.html">The Religious and Philosophical Thought 
-of Antonio Machado</a></em>. También he puesto el texto completo de mis artículos. 
-He traducido todos los <a href="poems.html">poemas</a> de Antonio Machado, su obra filosófica <em><a href="poems.html">Del Cancionero apócrifo</a></em>, 
-unos extractos de Juan de Mairena, y la biografía de Antonio Machado por su hermano: 
-<em><a href="biography_toc.html">Últimas soledades del poeta Antonio Machado (Recuedos de su hermano José)</a></em>. También he 
-traducido el ensayo <a href="unamuno.html">"Mi religión"</a> de Unamuno y una selección de sus poemas religiosas 
-de los libros: <em><a href="unamuno_religious.html">Poesías</a>, <a href="unamuno_religious.html">Rosario de sonetos líricos</a></em>, y el libro entero, <em><a href="unamuno_religious.html">El Cristo de Velázquez</a>.</em>  
-Ahora he traducido las <a href="becquer.html">Rimas</a> de Gustavo Adolfo Bécquer. Cualquier persona que quiera copiar o 
-citar estas obras puede hacerlo, dando crédito a la fuente o el sitio donde han sido publicadas.</p>
+            <p>He puesto aquÃ­ el texto completo de mi libro, <em><a href="book.html">El pensamiento religioso y filosÃ³fico 
+de Antonio Machado</a></em>, y una traducciÃ³n al inglÃ©s, <em><a href="book_en.html">The Religious and Philosophical Thought 
+of Antonio Machado</a></em>. TambiÃ©n he puesto el texto completo de mis artÃ­culos. 
+He traducido todos los <a href="poems.html">poemas</a> de Antonio Machado, su obra filosÃ³fica <em><a href="poems.html">Del Cancionero apÃ³crifo</a></em>, 
+unos extractos de Juan de Mairena, y la biografÃ­a de Antonio Machado por su hermano: 
+<em><a href="biography_toc.html">Ãšltimas soledades del poeta Antonio Machado (Recuedos de su hermano JosÃ©)</a></em>. TambiÃ©n he 
+traducido el ensayo <a href="unamuno.html">"Mi religiÃ³n"</a> de Unamuno y una selecciÃ³n de sus poemas religiosas 
+de los libros: <em><a href="unamuno_religious.html">PoesÃ­as</a>, <a href="unamuno_religious.html">Rosario de sonetos lÃ­ricos</a></em>, y el libro entero, <em><a href="unamuno_religious.html">El Cristo de VelÃ¡zquez</a>.</em>  
+Ahora he traducido las <a href="becquer.html">Rimas</a> de Gustavo Adolfo BÃ©cquer. Cualquier persona que quiera copiar o 
+citar estas obras puede hacerlo, dando crÃ©dito a la fuente o el sitio donde han sido publicadas.</p>
 
-<p>Las dos ponencias (en inglés)—<a href="lectures.html">"The Undiscovered Self"</a> y <a href="lectures.html">"The Art of Loving"</a>—ayudan 
-a explicar la filosofía que he seguido en mis classes, y en mis publicaciones. </p>
+<p>Las dos ponencias (en inglÃ©s)â€”<a href="lectures.html">"The Undiscovered Self"</a> y <a href="lectures.html">"The Art of Loving"</a>â€”ayudan 
+a explicar la filosofÃ­a que he seguido en mis classes, y en mis publicaciones. </p>
 
        
             <div id="footer" align="center">
