--- a/machado_prose.html
+++ b/machado_prose.html
@@ -38,7 +38,7 @@
                     <a href="lectures.html">Lectures</a> &nbsp;&nbsp;&nbsp;&nbsp; 
                     <a href="machado.html">Machado</a>&nbsp;&nbsp;&nbsp;&nbsp; 
                     <a href="unamuno.html">Unamuno</a> &nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="becquer.html">Bécquer</a> &nbsp;&nbsp;&nbsp;&nbsp; 
+                    <a href="becquer.html">BÃ©cquer</a> &nbsp;&nbsp;&nbsp;&nbsp; 
                     <a href="anderson_imbert.html">Anderson Imbert</a> &nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="cv.html">CV</a>  &nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="contact.html">Contact</a>
@@ -47,18 +47,18 @@
 
   <h2>Antonio Machado: Prose</h2>
 
-  <p>According to Juan de Mairena, "all poetry presupposes the existence of a metaphysical philosophy… and the poet has the obligation to explain it separately in terms that are clear."  In <em>From the Apocryphal Songbook (Del cancionero apócrifo)</em> Machado fulfills this obligation by providing the metaphysical basis for his poetic thought.  One reason critics have sometimes misunderstood the meaning of Machado's poetry is that they have failed to give sufficient attention to the ideas found in this work.  Because it is so crucial to a clear understanding of Machado's thought, I have translated it for English-speaking readers, along with some excerpts from related works by Juan de Mairena.</p>
+  <p>According to Juan de Mairena, "all poetry presupposes the existence of a metaphysical philosophyâ€¦ and the poet has the obligation to explain it separately in terms that are clear."  In <em>From the Apocryphal Songbook (Del cancionero apÃ³crifo)</em> Machado fulfills this obligation by providing the metaphysical basis for his poetic thought.  One reason critics have sometimes misunderstood the meaning of Machado's poetry is that they have failed to give sufficient attention to the ideas found in this work.  Because it is so crucial to a clear understanding of Machado's thought, I have translated it for English-speaking readers, along with some excerpts from related works by Juan de Mairena.</p>
 
-<p>Since it has never been available to English-speaking readers, I have also translated the biography of Antonio Machado by his brother: <em>The Final Solitude of the poet Antonio Machado (Memories of his brother José)-Últimas soledades del poeta Antonio Machado (Recuedos de su hermano José)</em>.  For the reader’s convenience I have divided the text into separate parts.  I have now translated the first 5 Parts (about two-thirds of the total) and I will post the remaining parts as soon as they are finished.
+<p>Since it has never been available to English-speaking readers, I have also translated the biography of Antonio Machado by his brother: <em>The Final Solitude of the poet Antonio Machado (Memories of his brother JosÃ©)-Ãšltimas soledades del poeta Antonio Machado (Recuedos de su hermano JosÃ©)</em>.  For the readerâ€™s convenience I have divided the text into separate parts.  I have now translated the first 5 Parts (about two-thirds of the total) and I will post the remaining parts as soon as they are finished.
 </p>
 
   <ul>
 
-  <li><a href="translations/prose/apocryphal_songbook_1.pdf">From an Apocryphal Songbook: CLXVII – Abel Martin</a></li>
+  <li><a href="translations/prose/apocryphal_songbook_1.pdf">From an Apocryphal Songbook: CLXVII â€“ Abel Martin</a></li>
 
-  <li><a href="translations/prose/apocryphal_songbook_2.pdf">From an Apocryphal Songbook: CLXVIII – Juan de Mairena</a></li>
+  <li><a href="translations/prose/apocryphal_songbook_2.pdf">From an Apocryphal Songbook: CLXVIII â€“ Juan de Mairena</a></li>
 
-  <li><a href="translations/prose/juan_de_mairena_1.pdf">Juan de Mairena – Prose Excerpts</a></li>
+  <li><a href="translations/prose/juan_de_mairena_1.pdf">Juan de Mairena â€“ Prose Excerpts</a></li>
   <li><a href="biography_toc.html">The Biography of Antonio Machado by Jose Machado</a></li>
   </ul>
 
