--- a/unamuno.html
+++ b/unamuno.html
@@ -35,25 +35,25 @@
                 the letters from Unamuno were lost, quite possibly during the poet's tragic
                 escape from Franco's army shortly before his death.  Because of this we do not
                 know what Unamuno said in his letters to Machado, but we have an anecdotal
-                account which reveals how he felt about the poet.  Miguel PÈrez Ferrero
-                describes an incident when Unamuno visited a cafÈ in Madrid where the Machado
+                account which reveals how he felt about the poet.  Miguel P√©rez Ferrero
+                describes an incident when Unamuno visited a caf√© in Madrid where the Machado
                 brothers had a <em>tertulia</em>, and upon arriving at the door he said:
                 "I am here to greet the man with the shabbiest clothes and the purest soul
                 of any person I know: Don Antonio Machado." [<a href="#foot1">1</a>]  In
-                the biography of his brother, JosÈ Machado tells us that Unamuno hardly ever
-                came to Madrid without making an effort to meet with Antonio and Manuel.  JosÈ
+                the biography of his brother, Jos√© Machado tells us that Unamuno hardly ever
+                came to Madrid without making an effort to meet with Antonio and Manuel.  Jos√©
                 also describes the last time they saw each other, and he tells us that there
                 were few things which affected Antonio as deeply as the death of Unamuno, s
                 hortly before the beginning of the Spanish Civil War.</p>
             <p>I have translated several of Unamuno's works on the subject of religion,
-                starting with his essay "My Religion" ("<em>Mi religiÛn</em>") which serves
+                starting with his essay "My Religion" ("<em>Mi religi√≥n</em>") which serves
                 as an introduction to his religious thought and provides the foundation for
                 everything he wrote on this subject.  Although Unamuno's religious poems
                 express his basic philosophy of life, most have not been translated into English.
                 I have therefore translated the poems dealing with religion from his first
-                two books of poetry: <em>Poems (PoesÌas)</em> and <em>Rosary of Lyrical Sonnets
-                    (Rosario de sonetos lÌricos)</em>, as well as <a href="translations/unamuno/san_manuel_bueno_martir.pdf"><em>Saint Manuel Bueno, the Martyr (San Manuel Bueno, Martir)</em></a>, and Unamuno's long meditation on
-                the painting of the crucifixion by Diego de Velazquez:  <a href="unamuno_religious.html"><em>The Christ of Velazquez (El Cristo de Vel·zquez)</em></a>.  I have added some comments about my
+                two books of poetry: <em>Poems (Poes√≠as)</em> and <em>Rosary of Lyrical Sonnets
+                    (Rosario de sonetos l√≠ricos)</em>, as well as <a href="translations/unamuno/san_manuel_bueno_martir.pdf"><em>Saint Manuel Bueno, the Martyr (San Manuel Bueno, Martir)</em></a>, and Unamuno's long meditation on
+                the painting of the crucifixion by Diego de Velazquez:  <a href="unamuno_religious.html"><em>The Christ of Velazquez (El Cristo de Vel√°zquez)</em></a>.  I have added some comments about my
                 translation of poetry below.</p>
 
             <p>For a detailed discussion of Unamuno's religious thought the reader may consult my articles:   <a href="religion_of_uncertainty.pdf">Unamuno and the Religion of Uncertainty</a>, <a href="god_of_unamuno.pdf">The God of Miguel de Unamuno</a> and <a href="psalms_unamuno.pdf">The Psalms of Unamuno</a> which are also posted on this web site.</p>
@@ -89,7 +89,7 @@
                 who have considered him an atheist have perhaps been influenced by
                 their own lack of religious faith.  In the poems I have translated,
                 there are none--not even his paradoxical poem, "The Atheist's Prayer"
-                ("La oraciÛn del ateo")--that express unbelief.  Some critics have
+                ("La oraci√≥n del ateo")--that express unbelief.  Some critics have
                 felt that Don Manuel, the character from his novella, <em>Saint Manuel
                     Bueno Martyr (San Manuel Bueno Martir)</em>, the priest who lost his faith
                 in God, is an example of Unamuno's lack of belief.  But the narrator
@@ -113,7 +113,7 @@
                 open mind, but it also helps us live and act with greater vitality.
                 My translation of Unamuno's poetry has convinced me of the truth of
                 these words.</p>
-            <p><a name="foot1"></a>[1] Miguel PÈrez Ferrero, <em>Vida de Antonio Machado y Manuel</em> 2a EdiciÛn (Madrid: Austral, 1953), p. 196.</p>
+            <p><a name="foot1"></a>[1] Miguel P√©rez Ferrero, <em>Vida de Antonio Machado y Manuel</em> 2a Edici√≥n (Madrid: Austral, 1953), p. 196.</p>
             <div id="footer" align="center">
                 <div align="center"> &copy; Copyright 2011-2017 Armand F. Baker </div>
             </div>
