--- a/unamuno_religious.html
+++ b/unamuno_religious.html
@@ -22,7 +22,7 @@
                     <a href="lectures.html">Lectures</a> &nbsp;&nbsp;&nbsp;&nbsp; 
                     <a href="machado.html">Machado</a>&nbsp;&nbsp;&nbsp;&nbsp; 
                     <a href="unamuno.html">Unamuno</a> &nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="becquer.html">BÈcquer</a> &nbsp;&nbsp;&nbsp;&nbsp; 
+                    <a href="becquer.html">B√©cquer</a> &nbsp;&nbsp;&nbsp;&nbsp; 
                     <a href="anderson_imbert.html">Anderson Imbert</a> &nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="cv.html">CV</a>  &nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="contact.html">Contact</a>
@@ -31,17 +31,17 @@
             <h2>The Religious Poetry of Miguel de Unamuno</h2>
 
             <ul>
-                <li><a href="translations/unamuno/poems_1.pdf">Poems (PoesÌas) ñ Part 1</a> [Poems of various cathedrals; The Severed Flower]</li>
-                <li><a href="translations/unamuno/poems_2.pdf">Poems (PoesÌas) ñ Part 2</a> [Psalms]</li>
-                <li><a href="translations/unamuno/poems_3.pdf">Poems (PoesÌas) ñ Part 3</a> [Sleep, Dear Soul; Spiritual Awakening; An Eternal Elegy, The Seven Last Words and Two more; Sonnets]</li>
-                <li><a href="translations/unamuno/rosary1.pdf">Rosary of Lyrical Sonnets (Rosario de sonetos lÌricos) - Part 1</a></li>
-                <li><a href="translations/unamuno/rosary2.pdf">Rosary of Lyrical Sonnets (Rosario de sonetos lÌricos) - Part 2</a></li>
-                <li><a href="translations/unamuno/cristo1a.pdf">The Christ of Vel·zquez (El Cristo de Vel·zquez) - Part 1a</a></li>
-                <li><a href="translations/unamuno/cristo1b.pdf">The Christ of Vel·zquez (El Cristo de Vel·zquez) - Part 1b</a></li>
-                <li><a href="translations/unamuno/cristo2.pdf">The Christ of Vel·zquez (El Cristo de Vel·zquez) - Part 2</a></li>
-                <li><a href="translations/unamuno/cristo3a.pdf">The Christ of Vel·zquez (El Cristo de Vel·zquez) - Part 3a</a></li>
-                <li><a href="translations/unamuno/cristo3b.pdf">The Christ of Vel·zquez (El Cristo de Vel·zquez) - Part 3b</a></li>
-                <li><a href="translations/unamuno/cristo4.pdf">The Christ of Vel·zquez (El Cristo de Vel·zquez) - Part 4</a></li>
+                <li><a href="translations/unamuno/poems_1.pdf">Poems (Poes√≠as) ‚Äì Part 1</a> [Poems of various cathedrals; The Severed Flower]</li>
+                <li><a href="translations/unamuno/poems_2.pdf">Poems (Poes√≠as) ‚Äì Part 2</a> [Psalms]</li>
+                <li><a href="translations/unamuno/poems_3.pdf">Poems (Poes√≠as) ‚Äì Part 3</a> [Sleep, Dear Soul; Spiritual Awakening; An Eternal Elegy, The Seven Last Words and Two more; Sonnets]</li>
+                <li><a href="translations/unamuno/rosary1.pdf">Rosary of Lyrical Sonnets (Rosario de sonetos l√≠ricos) - Part 1</a></li>
+                <li><a href="translations/unamuno/rosary2.pdf">Rosary of Lyrical Sonnets (Rosario de sonetos l√≠ricos) - Part 2</a></li>
+                <li><a href="translations/unamuno/cristo1a.pdf">The Christ of Vel√°zquez (El Cristo de Vel√°zquez) - Part 1a</a></li>
+                <li><a href="translations/unamuno/cristo1b.pdf">The Christ of Vel√°zquez (El Cristo de Vel√°zquez) - Part 1b</a></li>
+                <li><a href="translations/unamuno/cristo2.pdf">The Christ of Vel√°zquez (El Cristo de Vel√°zquez) - Part 2</a></li>
+                <li><a href="translations/unamuno/cristo3a.pdf">The Christ of Vel√°zquez (El Cristo de Vel√°zquez) - Part 3a</a></li>
+                <li><a href="translations/unamuno/cristo3b.pdf">The Christ of Vel√°zquez (El Cristo de Vel√°zquez) - Part 3b</a></li>
+                <li><a href="translations/unamuno/cristo4.pdf">The Christ of Vel√°zquez (El Cristo de Vel√°zquez) - Part 4</a></li>
             </ul>  
 
             <div id="footer" align="center">
