more diacritic fixes

--- a/biography_toc.html
+++ b/biography_toc.html
@@ -39,15 +39,15 @@
   </div>
 
   <h2>The Final Solitude of the poet Antonio Machado<br />
-(Memories of his Brother, José)</h2>
+(Memories of his Brother, JosÃ©)</h2>
 
-<p>After translating Machado’s poetry and some of his important works of prose, it occurred to me that the account of his life written by his brother José was not available in English.  Since it contains an intimate, personal account of the poet’s life with some thoughtful observations about his poetry and was helpful for my own understanding of his work, I would like to make it available to other English-speakers.  My translation is  based on the first edition:  ÚLTIMAS SOLEDADES DEL POETA ANTONIO MACHADO (<em>Recuerdos de su hermano José</em>) Santiago de Chile: multigrafiado, 1958.  It is my hope that this translation will broaden the understanding of Machado’s life and work.  I have divided the biography into separate parts.  A link to this Table of Contents can be found at the end of each part.</p>
+<p>After translating Machadoâ€™s poetry and some of his important works of prose, it occurred to me that the account of his life written by his brother JosÃ© was not available in English.  Since it contains an intimate, personal account of the poetâ€™s life with some thoughtful observations about his poetry and was helpful for my own understanding of his work, I would like to make it available to other English-speakers.  My translation is  based on the first edition:  ÃšLTIMAS SOLEDADES DEL POETA ANTONIO MACHADO (<em>Recuerdos de su hermano JosÃ©</em>) Santiago de Chile: multigrafiado, 1958.  It is my hope that this translation will broaden the understanding of Machadoâ€™s life and work.  I have divided the biography into separate parts.  A link to this Table of Contents can be found at the end of each part.</p>
 
 <h2>Table of Contents</h2>
 
 <p><a href="translations/biography/final_solitude_1.pdf">Part 1</a> (.pdf)</p>
 
-<p>Introduction; Portrait; Preface; Aspects of the Poet’s Character; Debut in the Theater</p>
+<p>Introduction; Portrait; Preface; Aspects of the Poetâ€™s Character; Debut in the Theater</p>
 
 <p><a href="translations/biography/final_solitude_2.pdf">Part 2</a> (.pdf)</p>
 <p>Reception at the Free Institute of Learning; Speech by Bernard de Cossio; His Fondness for Coffee & Tobacco; His Clothing; Melancholy; Certain Habits; Ruben Dario</p>
@@ -69,10 +69,10 @@
   <p>More about his poetry; Three Loves of the Poet: his mother, Leonor, Guiomar</p>
 
 <p><a href="translations/biography/final_solitude_8.pdf">Part 8</a> (.pdf)</p>
-<p>The beginning of the War and the final days in Madrid; Traveling to Valencia and then to Rocafort; The Escape to Barcelona and the difficult Winter in the Torre de Castañer</p>
+<p>The beginning of the War and the final days in Madrid; Traveling to Valencia and then to Rocafort; The Escape to Barcelona and the difficult Winter in the Torre de CastaÃ±er</p>
 
 <p><a href="translations/biography/final_solitude_9.pdf">Part 9</a> (.pdf)</p>
-<p>The Tragic Flight from Barcelona across the border into France; The arrival in Collioure; The Poet’s Death and Burial; A final Impression of his brother José</p>
+<p>The Tragic Flight from Barcelona across the border into France; The arrival in Collioure; The Poetâ€™s Death and Burial; A final Impression of his brother JosÃ©</p>
 
   <div id="footer" align="center">
 
